[project]
name = "smg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "brotli==1.2.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "colorama==0.4.6",
    "getch>=1.0",
    "idna==3.18",
    "mutagen==1.48.1",
    "pycryptodomex==3.23.0",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "urllib3==2.7.0",
    "validators==0.35.0",
    "websockets==16.0",
    "wget==3.2",
    "winotify==1.1.0",
    "yt-dlp-ejs==0.8.0",
    "yt-dlp[default]==2026.7.4",
]
